// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`home.styles ContactButton dark theme snapshot 1`] = `
.c2 {
  font-size: 14px;
  color: #ffffff;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: text;
  font-family: Inter-SemiBold;
}

.c0 {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 8px;
  padding: 8px 24px;
  border-radius: 8px;
  border: none;
  height: 40px;
  transition: all 0.2s ease;
  background-color: #d3d3d3;
  cursor: pointer;
}

.c0:hover {
  opacity: 0.9;
}

.c0:active {
  transform: scale(0.98);
}

.c0:disabled {
  cursor: default;
}

.c0:disabled:hover {
  opacity: 1;
}

.c3 {
  white-space: nowrap;
  cursor: inherit;
}

.c1 {
  background-color: transparent;
  border: 1px solid #D9DDDB;
}

<button
  aria-label="Contact"
  class="c0 c1"
  type="button"
>
  <p
    class="c2 c3"
  >
    Contact
  </p>
</button>
`;

exports[`home.styles ContactButton light theme snapshot 1`] = `
.c2 {
  font-size: 14px;
  color: #0a0a0a;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: text;
  font-family: Inter-SemiBold;
}

.c0 {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 8px;
  padding: 8px 24px;
  border-radius: 8px;
  border: none;
  height: 40px;
  transition: all 0.2s ease;
  background-color: #d3d3d3;
  cursor: pointer;
}

.c0:hover {
  opacity: 0.9;
}

.c0:active {
  transform: scale(0.98);
}

.c0:disabled {
  cursor: default;
}

.c0:disabled:hover {
  opacity: 1;
}

.c3 {
  white-space: nowrap;
  cursor: inherit;
}

.c1 {
  background-color: transparent;
  border: 1px solid #D9DDDB;
}

<button
  aria-label="Contact"
  class="c0 c1"
  type="button"
>
  <p
    class="c2 c3"
  >
    Contact
  </p>
</button>
`;

exports[`home.styles EmailIcon dark theme snapshot 1`] = `
<svg
  class=""
  fill="#a3a3a3"
  height="32"
  style="min-width: 32px; min-height: 32px; max-width: 32px; max-height: 32px; color: rgb(163, 163, 163);"
  width="32"
/>
`;

exports[`home.styles EmailIcon light theme snapshot 1`] = `
<svg
  class=""
  fill="#000000"
  height="32"
  style="min-width: 32px; min-height: 32px; max-width: 32px; max-height: 32px; color: rgb(0, 0, 0);"
  width="32"
/>
`;

exports[`home.styles GithubIcon dark theme snapshot 1`] = `
<svg
  class=""
  fill="#a3a3a3"
  height="24"
  style="min-width: 24px; min-height: 24px; max-width: 24px; max-height: 24px; color: rgb(163, 163, 163);"
  width="24"
/>
`;

exports[`home.styles GithubIcon light theme snapshot 1`] = `
<svg
  class=""
  fill="#000000"
  height="24"
  style="min-width: 24px; min-height: 24px; max-width: 24px; max-height: 24px; color: rgb(0, 0, 0);"
  width="24"
/>
`;

exports[`home.styles Name dark theme snapshot 1`] = `
.c0 {
  font-size: 40px;
  color: #ffffff;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: text;
  font-family: Inter-Bold;
  line-height: 40px;
}

.c1 {
  margin-bottom: 16px;
}

<h1
  class="c0 c1"
>
  Name
</h1>
`;

exports[`home.styles Name light theme snapshot 1`] = `
.c0 {
  font-size: 40px;
  color: #0a0a0a;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: text;
  font-family: Inter-Bold;
  line-height: 40px;
}

.c1 {
  margin-bottom: 16px;
}

<h1
  class="c0 c1"
>
  Name
</h1>
`;

exports[`home.styles ViewProjectsButton dark theme snapshot 1`] = `
.c2 {
  font-size: 14px;
  color: #0a0a0a;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: text;
  font-family: Inter-SemiBold;
}

.c0 {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 8px;
  padding: 8px 24px;
  border-radius: 8px;
  border: none;
  height: 40px;
  transition: all 0.2s ease;
  background-color: #d3d3d3;
  cursor: pointer;
}

.c0:hover {
  opacity: 0.9;
}

.c0:active {
  transform: scale(0.98);
}

.c0:disabled {
  cursor: default;
}

.c0:disabled:hover {
  opacity: 1;
}

.c3 {
  white-space: nowrap;
  cursor: inherit;
}

.c1 {
  background-color: #ffffff;
}

<button
  aria-label="View"
  class="c0 c1"
  type="button"
>
  <p
    class="c2 c3"
  >
    View
  </p>
  <svg
    class=""
    fill="#0a0a0a"
    height="24"
    style="min-width: 24px; min-height: 24px; max-width: 24px; max-height: 24px; color: rgb(10, 10, 10);"
    width="24"
  />
</button>
`;

exports[`home.styles ViewProjectsButton light theme snapshot 1`] = `
.c2 {
  font-size: 14px;
  color: #ffffff;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: text;
  font-family: Inter-SemiBold;
}

.c0 {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 8px;
  padding: 8px 24px;
  border-radius: 8px;
  border: none;
  height: 40px;
  transition: all 0.2s ease;
  background-color: #d3d3d3;
  cursor: pointer;
}

.c0:hover {
  opacity: 0.9;
}

.c0:active {
  transform: scale(0.98);
}

.c0:disabled {
  cursor: default;
}

.c0:disabled:hover {
  opacity: 1;
}

.c3 {
  white-space: nowrap;
  cursor: inherit;
}

.c1 {
  background-color: #0a0a0a;
}

<button
  aria-label="View"
  class="c0 c1"
  type="button"
>
  <p
    class="c2 c3"
  >
    View
  </p>
  <svg
    class=""
    fill="#ffffff"
    height="24"
    style="min-width: 24px; min-height: 24px; max-width: 24px; max-height: 24px; color: rgb(255, 255, 255);"
    width="24"
  />
</button>
`;
